[package]
name = "atelier-data-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
argh = "0.1.12"
encoding_rs = "0.8.33"
gust-g1t = { git = "https://github.com/holly-hacker/atelier-tools", branch = "main" }
gust-pak = { git = "https://github.com/holly-hacker/atelier-tools", branch = "main" }
memchr = "2.7.1"
oxipng = { version = "9.0.0", default-features = false, features = [
    "parallel",
    "zopfli",
] }
png = "0.17.13"
rayon = "1.10.0"
roxmltree = { version = "0.19.0", default-features = false, features = ["std"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typescript-type-def = "0.5.11"
webp = { version = "0.2.6", default-features = false }

[profile.dev.package.atelier-data-extractor]
opt-level = 1

[profile.dev.package.roxmltree]
opt-level = 2

[profile.dev.package.png]
opt-level = 2

[profile.dev.package.simd-adler32]
opt-level = 2

[profile.dev.package.dds-decoder]
opt-level = 2
